Quote section complete with correct spacing and coloring. Signup DIV complete with correct coloring and accurate spacing. Footer div changed to footer and complete, everything is centered.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 body {
     display: flex;
     flex-direction: column;
@@ -85,14 +86,15 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0 13em;
-    margin-top: 3em;
+    padding: 4em;
 }
 
 h2 {
     display: flex;
     flex-direction: center;
     padding-bottom: 2em;
+    font-weight: 900;
+    font-size: 32px;
 }
 
 .cardcontainer {
@@ -108,6 +110,7 @@ h2 {
     flex-direction: column;
     align-items: center;
     gap: .5em;
+    margin-bottom: 3em;
 }
 
 .card-img {
@@ -117,4 +120,53 @@ h2 {
     max-width: 100%;
     padding : 8px;
     border-radius: 25px;
+}
+
+.quote {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #E5E7EB;
+    padding: 5em;
+    padding-top: 8em;
+}
+
+.quote p {
+    align-self: flex-end;
+    font-weight: bolder;
+    font-size: 24px;
+    color: #1f2937;
+}
+
+.quote em {
+    font-size: 28px;
+    font-weight: 80;
+    color: #1f2937;
+}
+
+.cta-box {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background: #3882F6;
+    color: white;
+    margin: 5em;
+    padding: 1em;
+    border-radius: 20px;
+}
+
+.button2  {
+    border: solid 2px;
+    border-color: white;
+    justify-content: flex-end;
+    align-content: center;
+}
+
+footer {
+    background-color: #1f2937;
+    color: #FFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2em 0;
 }
